feat: show subscription access token status
